fix #27, basic dark mode CSS media queries

--- a/src/css/lobby.css
+++ b/src/css/lobby.css
@@ -90,3 +90,71 @@ footer {
     display: none;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  /* dark mode */
+  body {
+    background-color: #131313;
+    color: #ccc;
+  }
+  .well {
+    background-color: #111;
+    border-color: #222;
+  }
+  .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+    color: #aaa;
+    background-color: #111;
+    border-color: #222;
+  }
+  .nav-tabs {
+    border-bottom-color: #222;
+  }
+  .nav-tabs > li > a:hover {
+    border-color: #111 #111 #222;
+  }
+  .nav > li > a:hover, .nav > li > a:focus {
+    background-color: #222;
+  }
+  .table thead > tr > th, .table tbody > tr > th, .table tfoot > tr > th, .table thead > tr > td, .table tbody > tr > td, .table tfoot > tr > td {
+    border-top-color: #040404;
+  }
+  .form-control {
+    /*color: #333;*/
+    background-color: #000;
+    border-color: #222;
+    /*box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);*/
+  }
+  .panel {
+    background-color: #000;
+    /*box-shadow: 0 1px 1px rgba(0,0,0,0.05);*/
+  }
+  .panel-default {
+    border-color: #222;
+  }
+  .dropdown-menu {
+    background-color: #000;
+    border-color: #222;
+    /*border: 1px solid rgba(0,0,0,0.15);*/
+    /*box-shadow: 0 6px 12px rgba(0,0,0,0.175);*/
+  }
+  .dropdown-menu .divider {
+    background-color: #222;
+  }
+  .dropdown-menu > li > a {
+    color: #aaa;
+  }
+  .modal-content {
+    background-color: #000;
+    border-color: #222;
+    /*box-shadow: 0 3px 9px rgba(0,0,0,0.5);*/
+  }
+  button, input, select[multiple], textarea {
+    background-color: #111;
+    color: #ddd;
+    border-color: #222;
+  }
+  .table > thead > tr > td.success, .table > tbody > tr > td.success, .table > tfoot > tr > td.success, .table > thead > tr > th.success, .table > tbody > tr > th.success, .table > tfoot > tr > th.success, .table > thead > tr.success > td, .table > tbody > tr.success > td, .table > tfoot > tr.success > td, .table > thead > tr.success > th, .table > tbody > tr.success > th, .table > tfoot > tr.success > th {
+    background-color: #14200f;
+    border-color: #1a3107;
+  }
+}
